deploy-extension.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: extension
    env: dsv
    version: v1
  name: extension-deploy
  namespace: dsv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extension
      env: dsv
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: extension
        env: dsv
    spec:
      containers:
      - image: gcr.io/istio-demo-241522/extension:f327d83
        name: extension-pod
        ports:
        - containerPort: 8080
