deploy-gcrab.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: gcrab
    env: dsv
  name: gcrab-deploy
  namespace: dsv
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gcrab
      env: dsv
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gcrab
        env: dsv
    spec:
      containers:
      - image: gcr.io/crucial-amp-240715/github.com/gcrabrahao/hello:f588be918bf29600c7a3cc4f00d32d0f513c4c76
        name: gcrab-pod
