lb-gcrab.yml
apiVersion: v1
kind: Service
metadata:
  name: gcrab-lb
spec:
  type: LoadBalancer
  selector:
    app: gcrab
    env: dsv
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
