lb-main.yml
apiVersion: v1
kind: Service
metadata:
  name: "main-lb"
  namespace: "dsv"
spec:
  type: LoadBalancer
  selector:
    app: main
    env: dsv
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
