svc-extension.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "extension-deploy-service"
  namespace: "dsv"
  labels:
    app: "extension"
    env: "dsv"
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    app: "extension"
    env: "dsv"
  type: "ClusterIP"
