ns-policy.yml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: "dsv"
spec:
  host: "*.dsv.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
