policy.yml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "extension"
  namespace: "dsv"
spec:
  host: "extension-deploy-service.dsv.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "name"
  namespace: "dsv"
spec:
  host: "name-deploy-service.dsv.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "main"
  namespace: "dsv"
spec:
  host: "main-deploy-service.dsv.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
